# routes/api.php
@@ -8,7 +8,7 @@ use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
     Route::get('occurrences', [OccurrenceController::class, 'index']);
-    Route::get('occurrences/{gbif_key}', [OccurrenceController::class, 'show']);
+    Route::get('occurrences/{occurrenceID}', [OccurrenceController::class, 'show']);
     Route::get('datasets', [DatasetApiController::class, 'index'])->name('api.datasets');
 
     Route::get('tiles/{z}/{x}/{y}', function (int $z, int $x, int $y) {
